snap/tests/no_specified_type.stderr
error: expected return type
 --> tests/no_specified_type.rs:6:5
  |
6 |     fn no_type_specified() {
  |     ^^^^^^^^^^^^^^^^^^^^^^
